--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/08.jpg" class="image fit thumb"><img src="images/thumbs/08.jpg" alt="" /></a>
 								<h3>San Jose (2019)</h3>
-							-->
-							</article><article class="col-6 col-12-xsmall work-item">
+							
+							</article> -->
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.jpg" alt="" /></a>
 								<h3>Kitsilano (2019)</h3>
 							</article>
