--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="main">
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<header>Recent Work</header>
 						<div class="row">
 							
 							<article class="col-6 col-12-xsmall work-item">
@@ -131,7 +131,7 @@
 							</article>
 						</div>
 					</section>
-				</div>
+					</div>
 
 			
 		<!-- Footer -->
