--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="main">
 				<!-- Two -->
 					<section id="two">
-						<header>Recent Work</header>
+						<h2>Recent Work</h2>
 						<div class="row">
 							
 							<article class="col-6 col-12-xsmall work-item">
@@ -76,8 +76,8 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/10.JPG" class="image fit thumb"><img src="images/thumbs/10.jpg" alt="" /></a>
-								<h3>Richmond (2018)</h3>
+								<a href="images/fulls/16.JPG" class="image fit thumb"><img src="images/thumbs/16.JPG" alt="" /></a>
+								<h3>Niagra Falls (2018)</h3>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
@@ -106,8 +106,8 @@
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/16.JPG" class="image fit thumb"><img src="images/thumbs/16.JPG" alt="" /></a>
-								<h3>Niagra Falls (2018)</h3>
+								<a href="images/fulls/10.JPG" class="image fit thumb"><img src="images/thumbs/10.jpg" alt="" /></a>
+								<h3>Richmond (2018)</h3>
 							</article>
 							
 							<article class="col-6 col-12-xsmall work-item">
