--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
+		<meta name="google-site-verification" content="I89ZsBReRjgW64CsXo7KWIBQjROK47oUYx2eI7K_lgk" />
 	</head>
 	<body class="is-preload">
 
