--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 						and an aspiring designer.
 					</h1>
 				</div>
+				<div> <a href="clock/index.html">link</a>
+				</div>
 			</header>
 
 		<!-- Main -->
