--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<header id="header">
 				<div class="inner">
 					<h1><strong>I am Hasti</strong>, a passionate photographer, developer,<br />
-						and an aspiring designer.
-					</h1>
+						and an aspiring designer.</h1>
+				</div>
 			</header>
 
 		<!-- Main -->
